Generate the source code in the package directory without package-info.java